Fix minor layout issue with funding links.

--- a/FrontEnd/styles/package.scss
+++ b/FrontEnd/styles/package.scss
@@ -299,7 +299,7 @@
         &::after {
             content: '';
             position: absolute;
-            top: -8px;
+            top: -12px;
             right: 5px;
             width: 25px;
             height: 100%;
